# ag-isbnapi-fastapi

./: .gitignore  Dockerfile  README.md  aladin.py  book_example.csv  check_enviroment.py  check_environment.py  docker-build-image.sh  docker-compose.yml  dockerfile  main.py  main_old.py  pyproject.toml  second.py  second_util.py
.github/workflows/: test-github-actions.yml
alembic/: env.py
alembic/versions/: 5d55677d6f4a_create_request_records.py
app/: books.py  books_dependency.py  books_socket.py  main.py  models.py  test_main.py
app/auth/: __init__.py  password.py  token.py  user.py
app/common/: config.py  consts.py
app/database/: conn.py  sa_model.py  schema.py
app/db/: engine.py
app/dependencies/: request.py
app/errors.py/: exceptions.py
app/exceptions/: __init__.py  base.py  crawl_error.py  crwal_error.py  request_error.py  user_errors.py
app/middlewares/: api_error_handler.py  token_validator.py  trusted_host.py
app/nosql/: __init__.py  conn.py  manager.py  model.py
app/odmantic/: __init__.py  connect.py  models.py
app/routers/: __init__.py  auth.py  books.py  index.py  oauth.py  request.py  search.py
app/routes/: auth.py  books.py  books_request.py  crawl.py  files.py  health.py  index.py  oauth.py  request.py  search.py  users.py
app/scheduler/: default.py
app/settings/: __init__.py  base.py  product.py
app/task/: aladin_api.py  aladin_to_s3.py  back_crawl.py  crawl.py  crawler.py  image_downloader.py  image_upload.py  myscheduler.py
app/task_old/: book_scraper.py  config.py  image_downloader.py
app/utils/: date_utils.py  logger.py  repeat_crawl.py  scheduler.py  singleton_session.py
backend/auth/: authentication.py
backend/db/: database.py  db_user.py  models.py
backend/web/: env.py
error_json/: 97911583900983.txt  a.json
isbnapi/: main.py  schemas.py
isbnapi/auth/: oauth2.py
isbnapi/db/: database.py  db_book.py  db_bookinfo.py  db_missingbook.py  db_tempbook.py  hashing.py  models.py
isbnapi/routes/: book.py  missing_book.py  tempbook.py  user.py
isbnapi/web/: aladin.py  last_json.json  s3.py  test_s3.py
jupyter_research/: Untitled.ipynb  aladin.ipynb  async_return_type.ipynb  aws_0kb.ipynb  boto3_test.ipynb  data.json  datadict.ipynb  diff_iter_gen.ipynb  example.csv  file_singleton.py  getattr.ipynb  handle_csv.ipynb  http_status.ipynb  mongo.ipynb  motor.ipynb  my_numbers.txt  odmantic.ipynb  pymongo.ipynb  regex.ipynb  singleton.ipynb  str_enum.ipynb  text.txt  timedelta_none.ipynb
migrations/: env.py
migrations/versions/: 1e40c49042e0_first_autogen.py  5fac9e5bb7ec_first_migration.py  6a2a7c8f721a_first_autogen.py  (+1 more)
routers/: auth.py  books.py  isbn.py  request.py  search.py
sql_app/: engine.py  models.py  schemas.py
templates/: google_login_button.html  script.js
(+28 files in other folders)
