[tool.poetry]
name = "ag-isbnapi-fastapi"
version = "0.1.0"
description = ""
authors = ["noname2048 <sungwook.csw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.1"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
requests = "^2.25.1"
black = "^21.5b2"
python-dotenv = "^0.17.1"
xmltodict = "^0.12.0"
Pillow = "^8.2.0"
pymongo = {extras = ["srv"], version = "^3.12.0"}
python-multipart = "^0.0.5"
SQLAlchemy = "^1.4.26"
alembic = "^1.7.4"
psycopg2 = "^2.9.1"
Jinja2 = "^3.0.2"
aiofiles = "^0.7.0"
aiohttp = {extras = ["speedups"], version = "^3.8.0"}
aiodns = "^3.0.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
